--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: BY Blog
-SEOTitle: 瓜子920博客 | GZ Blog
+title: 瓜子920的博客
+SEOTitle: 瓜子920的博客 | GZ-920 Blog
 header-img: img/post-bg-desk.jpg
 email: chenxuanzhi2023@gmail.com
 description: "酷安、哔哩哔哩@瓜子920."
@@ -55,36 +55,7 @@ kramdown:
 
 
 
-# 评论系统
-# Disqus（https://disqus.com/）
-# disqus_username: disqus_WjzhclEFIZ
-
-# Gitalk
-gitalk:
-  enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: GZ-920.github.io    #仓库名称
-  owner: GZ-920    #github用户名
-  admin: GZ-920
-  distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
 
 
-
-
-
-# Featured Tags
-featured-tags: true                     # 是否使用首页标签
-featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
-
-
-
-# Progressive Web Apps
-chrome-tab-theme-color: "#000000"
-service-worker: true
-
-
-
-# Friends
