--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,10 @@ jianshu_username:
 #twitter_username:   
 
 
-
+# Sidebar settings
+sidebar: false                           # 是否开启侧边栏.
+sidebar-about-description: "说点装逼的话。。。"
+sidebar-avatar:/img/avatar-by.JPG      # 你的个人头像 这里你可以改成我在img文件夹中的两张备用照片 img/avatar-m 或 avatar-g
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
