--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,12 @@ description: "酷安、哔哩哔哩@瓜子920."
 keyword: "GZ, GZ Blog, 瓜子920博客, GZ-920, 酷安瓜子920, 哔哩哔哩瓜子920, C++, 刷机"
 url: "http://GZ-920.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/GZ-920/GZ-920.github.io/tree/master" # you code repository
+github_repo: "https://github.com/GZ-920/GZ-920.github.io/tree/master" # your code repository
 
 # Sidebar settings
 sidebar: false                           # 是否开启侧边栏.
 sidebar-about-description: "说点装逼的话。。。"
-sidebar-avatar:/img/avatar-by.JPG      # 你的个人头像 这里你可以改成我在img文件夹中的两张备用照片 img/avatar-m 或 avatar-g
-
+sidebar-avatar: /img/avatar-by.JPG      # 你的个人头像 这里你可以改成我在img文件夹中的两张备用照片 img/avatar-m 或 avatar-g
 
 # SNS settings
 RSS: false
@@ -22,26 +21,18 @@ zhihu_username:
 github_username:    
 facebook_username:  
 jianshu_username:   
-#twitter_username:   
-
-
-
+# twitter_username:   
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 permalink: pretty
 paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+exclude: ["less", "node_modules", "Gruntfile.js", "package.json", "README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
-
-
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
 gems: [jekyll-paginate]
-
-
-
 
 # Markdown settings
 # replace redcarpet to kramdown,
@@ -52,41 +43,24 @@ highlighter: rouge
 kramdown:
   input: GFM                            # use Github Flavored Markdown !important
 
-
-
 # 评论系统
 # Disqus（https://disqus.com/）
 # disqus_username: qiubaiying
 
 # Gitalk
 gitalk:
-  enable: false    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
+  enable: false    # 是否开启Gitalk评论
+  clientID: f2c84e7629bb1446c1a4                            # 生成的clientID
+  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    # 生成的clientSecret
+  repo: qiubaiying.github.io    # 仓库名称
+  owner: qiubaiying    # github用户名
   admin: qiubaiying
-  distractionFreeMode: true #是否启用类似FB的阴影遮罩
-
-
-
-
-
-
+  distractionFreeMode: true # 是否启用类似FB的阴影遮罩
 
 # Featured Tags
 featured-tags: false                     # 是否使用首页标签
 featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
 
-
-
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
 service-worker: false
-
-
-
-
-
-
-
